--- a/Profile Folder/chrome/windows/gsettings/style.scss
+++ b/Profile Folder/chrome/windows/gsettings/style.scss
@@ -78,7 +78,7 @@ h4 .about-flag {
 	
 	
 	
-	
+	border-radius: 50%;
 	
 	
 	&::before {
@@ -242,7 +242,7 @@ h4 .about-flag {
 	position: relative;
 	overflow: hidden;
 	padding-inline: 8px;
-	border-radius: 9999px;
+	border-radius: 50%;
 	width: fit-content;
 	transition: background-color 155ms;
 
